# PAL_Project

custom-sensors/dummy_sensor/: CMakeLists.txt  DummySensor.hh
custom-sensors/dummy_sensor_system/: CMakeLists.txt  DummySensorSystem.cc  DummySensorSystem.hh  test_world.sdf
my_robot_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
my_robot_ws/install/my_robot/share/ament_index/resource_index/parent_prefix_path/: my_robot
my_robot_ws/install/my_robot/share/my_robot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
my_robot_ws/install/my_robot/share/my_robot/cmake/: my_robotConfig-version.cmake  my_robotConfig.cmake
my_robot_ws/install/my_robot/share/my_robot/environment/: ament_prefix_path.dsv  path.dsv
my_robot_ws/install/my_robot/share/my_robot/launch/: gz.launch.py  my_robot_gz_spawn.launch.py  rviz.launch.py
my_robot_ws/install/my_robot/share/my_robot/meshes/: bcr_bot_mesh.dae  my_robot_mesh.dae
my_robot_ws/install/my_robot/share/my_robot/rviz/: entire_setup.rviz
my_robot_ws/install/my_robot/share/my_robot/urdf/: gz.xacro  macros.xacro  materials.xacro  my_robot.xacro
my_robot_ws/install/my_robot/share/my_robot/worlds/: empty.sdf  small_warehouse.sdf
my_robot_ws/log/: latest_build  latest_list
my_robot_ws/src/my_robot/: CMakeLists.txt  package.xml
my_robot_ws/src/my_robot/launch/: gz.launch.py  my_robot_gz_spawn.launch.py  rviz.launch.py
my_robot_ws/src/my_robot/rviz/: entire_setup.rviz
my_robot_ws/src/my_robot/urdf/: gz.xacro  macros.xacro  materials.xacro  my_robot.xacro
(+61 files in other folders)
